enforced Java 8 compatibility